# template-python-poetry-docker

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.production.yml  justfile  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/setup/: bashrc.override.sh  install-user-extensions.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md  story-template.md
.github/workflows/: ci.yml
compose/local/: docker-compose.docs.yml  docker-compose.local.yml
compose/local/app/: Dockerfile  start
compose/local/docs/: Dockerfile  start
compose/production/app/: Dockerfile  entrypoint  start
docs/: Makefile  conf.py  devenvironment.rst  howto.rst  index.rst
scripts/: ci.mk  docs.mk  git.mk  setup.mk
scripts/setup/: setup-envs.sh
